Bug 79582 - systemd-shutdown: shutdown process isn't quiet with 'quiet' kernel parameter on /proc/cmdline
Summary: systemd-shutdown: shutdown process isn't quiet with 'quiet' kernel parameter ...
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
: 57216 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-03 10:48 UTC by N. I.
Modified: 2014-10-24 00:43 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
testing video on Arch Linux (with systemd v212) (143.34 KB, text/plain)
2014-06-03 10:48 UTC, N. I.
Details

Description N. I. 2014-06-03 10:48:26 UTC
Created attachment 100348 [details]
testing video on Arch Linux (with systemd v212)

Overview:
The 'quiet' kernel parameter has no effect during the latter part of shutdown process.

Additional Information:
This may be a duplicate of this older bug: [0].
However the above one has been solved since systemd 206([1],[2]). And after systemd 209, it seems that this bug appears again.
Today I tested this on Arch Linux(in virtualbox) with systemd 212.(gzipped webm video as attachment)

[0]: https://bugs.freedesktop.org/show_bug.cgi?id=57216
[1]: http://cgit.freedesktop.org/systemd/systemd/tree/NEWS?id=v206#n77
[2]: http://cgit.freedesktop.org/systemd/systemd/commit/src/core/shutdown.c?id=8577e67245fc5d38bfdc32349388769895202bc4

Steps to Reproduce:
1.Ensure 'quiet' has been added to kernel parameter line, boot into OS without any "[ ERROR ]" during the startup process.
2.login, then use 'halt' to shutdown.

Actual Results:
Several lines output without error message printed on screen by systemd-shutdown.

Expected Results:
There are no output from systemd-shutdown(except the error output) when the 'quiet' appears on /proc/cmdline.
Comment 1 mo78 2014-06-09 16:05:13 UTC
I can confirm that bug with systemd v. 213-6. Quiet has been added to kernel parameter line, but still many output messages appears. It have to be black screen.
Comment 2 Ronny Chevalier 2014-06-10 09:31:40 UTC
I sent a patch a week ago to fix this, it will be merged in master soon I think.
Comment 3 Ronny Chevalier 2014-06-11 08:13:03 UTC
It is fixed in git.
Comment 4 mus.svz 2014-08-29 11:32:46 UTC
This was indeed fixed by Ronny with

http://cgit.freedesktop.org/systemd/systemd/commit/?id=e683212f049ac5d3f95fb17300cfa2fd971f78f3

But it is still broken in 216. I guess Lennart broke it again with:

http://cgit.freedesktop.org/systemd/systemd/commit/?id=d7b15e0a0161e8fd823bffd61a4799364871582f
Comment 5 mus.svz 2014-08-29 15:53:10 UTC
Patch sent to mailing list: http://lists.freedesktop.org/archives/systemd-devel/2014-August/022756.html
Comment 6 Lennart Poettering 2014-10-24 00:42:49 UTC
Patch applied. Thanks!
Comment 7 Lennart Poettering 2014-10-24 00:43:29 UTC
*** Bug 57216 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.